# experiment-animation-engine

./: demo.scene.js  editor.html  index.html  package-lock.json  package.json  rollup.config.js  scene.example.js  scene.js  tsconfig.json
demo/: animation_color.js  animation_function.js  animation_number.js  circle.js  circle_draw.js  image.js  polygon.js  rectangle.js  scene.js  scene_barebones.js  scene_barebones2.js  text.js
desktop/: Cargo.toml  scene.demo.js
desktop/src/: main.rs
desktop/src/renderer/: raylib.rs
desktop/src/runtime/: engine.js  glue_renderer.rs  mod.rs
editor/: index.html  main.ts  package.json
engine/: index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
engine/core/: animation.js  animation.ts  animation_color.js  animation_function.js  animation_number.js  animation_string.js  easing.js  math.js  scene.js  scene.ts
engine/shapes/: circle.js  circle.ts  image.js  index.js  point.js  polygon.js  polygon.ts  rectangle.js  text.js  textline.js
experiment-animation-engine-js/: index.html  package-lock.json  package.json  vite.config.js
experiment-animation-engine-js/src/: main.ts
public/: style.css
renderer/: domcanvas.js  domcanvas.ts  index.ts  mp4.ts  package.json  video.js  vite.config.js
src/: customScene.ts  index.html  main.ts  style.css
src/core/: animation_number.ts  math.ts  scene.ts
src/engine/: index.ts
src/engine/core/: animation.ts  animation_color.ts  animation_number.ts  easing.ts  scene.ts
src/renderer/: domcanvas.ts  mp4.ts
src/shapes/: circle.ts
(+6 files in other folders)
