[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version="0.10.0", features = ["macro", "loader"]}
raylib = { version = "5.5.1", features = ["wayland"] }
millisecond = "0.15.10"
csscolorparser = "0.8"
delaunator = "1.0.2"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "debuginfo"
